--- a/pom.xml
+++ b/pom.xml
@@ -83,16 +83,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.3.0-SNAPSHOT</version>
+                <version>3.3.0</version>
                 <configuration>
                     <relocations>
                         <relocation>
                             <pattern>co.aikar.commands</pattern>
-                            <shadedPattern>me.celus.pluginjam.lib.acf</shadedPattern> <!-- Replace this -->
+                            <shadedPattern>me.celus.pluginjam.lib.acf</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>co.aikar.locales</pattern>
-                            <shadedPattern>me.celus.pluginjam.lib.acflocales</shadedPattern> <!-- Replace this -->
+                            <shadedPattern>me.celus.pluginjam.lib.acflocales</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
